Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         <h3>
 <a name="willkommen-beim-qgis-20-tutorial-f%C3%BCr-die-caa-2014-in-t%C3%BCbingen" class="anchor" href="#willkommen-beim-qgis-20-tutorial-f%C3%BCr-die-caa-2014-in-t%C3%BCbingen"><span class="octicon octicon-link"></span></a>Willkommen beim QGIS 2.0 Tutorial für die CAA 2014 in Tübingen</h3>
 
-<p><a href="/slides/01_Datenquellen.htm">Die Einbindung unterschiedlicher Datenquellen</a></p>
+<p><a href="slides/01_Datenquellen.htm">Die Einbindung unterschiedlicher Datenquellen</a></p>
 
 <ul>
 <li>Dateibasierte Raster- und Vektorformate</li>
