Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -34,24 +34,24 @@
         <h3>
 <a name="willkommen-beim-qgis-20-tutorial-f%C3%BCr-die-caa-2014-in-t%C3%BCbingen" class="anchor" href="#willkommen-beim-qgis-20-tutorial-f%C3%BCr-die-caa-2014-in-t%C3%BCbingen"><span class="octicon octicon-link"></span></a>Willkommen beim QGIS 2.0 Tutorial für die CAA 2014 in Tübingen</h3>
 
-<p><a href="slides/01_Datenquellen.htm">Die Einbindung unterschiedlicher Datenquellen</a></p>
+<p><a href="slides/01_Datenquellen.htm">I Grundlagen</a></p>
 
-<ul>
-<li>Dateibasierte Raster- und Vektorformate</li>
-<li>Geodatenbanken</li>
-<li>OGC-Geodaten Web-Services</li>
-</ul><p><a href="slides/02_Analyse.htm">Analytische Funktionen</a></p>
+<ol>
+<li>AtlantGIS - Das Szenario</li>
+<li>Die Einbindung unterschiedlicher Datenquellen</li>
+<li>Nützliche Anpassungen und Erweiterungen </li>
+</ol><p><a href="slides/02_Analyse.htm">II Analytische Funktionen</a></p>
 
-<ul>
-<li>Kernfunktionalitäten auf Grundlage der gdal-/ogr-Bibliotheken</li>
+<ol>
+<li>Kernfunktionalitäten auf Grundlage der gdal-/ogr-Bibl.</li>
 <li>Erweiterte Funktionen über PlugIns</li>
-<li>Zugriff über die Python-Konsole</li>
-</ul><p><a href="slides/03_Visualisierung.htm">Präsentation der Ergebnisse mit dem Print-Composer</a></p>
+<li>Erweiterte Prozessierungsmöglichkeiten </li>
+</ol><p><a href="slides/03_Visualisierung.htm">III Präsentation der Ergebnisse mit dem Print-Composer</a></p>
 
-<ul>
+<ol>
 <li>Erstellen und Verwalten von Layouts</li>
-<li>Zusammenstellung spezifischer Kartierungen</li>
-</ul>
+<li>Zusammenstellung spezifischer Kartierungen </li>
+</ol>
       </section>
     </div>
 
