Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -43,8 +43,8 @@
 </ol><p><a href="slides/02_Analyse.htm">II Analytische Funktionen</a></p>
 
 <ol>
-<li>Kernfunktionalitäten auf Grundlage der gdal-/ogr-Bibl.</li>
-<li>Erweiterte Funktionen über PlugIns</li>
+<li>Überblick der Funktionen</li>
+<li>Analytisches Arbeiten</li>
 <li>Erweiterte Prozessierungsmöglichkeiten </li>
 </ol><p><a href="slides/03_Visualisierung.htm">III Präsentation der Ergebnisse mit dem Print-Composer</a></p>
 
