--- a/index.html
+++ b/index.html
@@ -49,9 +49,17 @@
 </ol><p><a href="slides/03_Visualisierung.htm">III Präsentation der Ergebnisse mit dem Print-Composer</a></p>
 
 <ol>
-<li>Erstellen und Verwalten von Layouts</li>
+<li>Anzeige von Geodaten (Datenansicht)</li>
+<li>Erstellen und Verwalten von Druckzusammenstellungen</li>
 <li>Zusammenstellung spezifischer Kartierungen </li>
-</ol>
+</ol><p>Downloads</p>
+
+<ul>
+<li>Daten: <a href="https://github.com/i3mainz/AtlantGIS/archive/tuebingen2014.zip">https://github.com/i3mainz/AtlantGIS/archive/tuebingen2014.zip</a>
+</li>
+<li>Folien: <a href="https://github.com/i3mainz/qgis-caa2014/archive/gh-pages.zip">https://github.com/i3mainz/qgis-caa2014/archive/gh-pages.zip</a>
+</li>
+</ul>
       </section>
     </div>
 
