Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 <li>Überblick der Funktionen</li>
 <li>Analytisches Arbeiten</li>
 <li>Erweiterte Prozessierungsmöglichkeiten </li>
-</ol><p><a href="slides/03_Visualisierung.htm">III Präsentation der Ergebnisse mit dem Print-Composer</a></p>
+</ol><p><a href="slides/03_Visualisierung.htm">III Präsentation von Daten</a></p>
 
 <ol>
 <li>Anzeige von Geodaten (Datenansicht)</li>
