--- a/slides/01_Grundlagen.htm
+++ b/slides/01_Grundlagen.htm
@@ -1,7 +1,7 @@
 <html><head>
 <meta http-equiv="content-type" content="text/html; charset=UTF-8">
 	<meta name="viewport" content="width=device-width">
-	<title>Deck Title</title>
+	<title>QGIS Grundlagen</title>
 	<link rel="stylesheet" href="01_Grundlagen-Dateien/default-reset.css">
 	<link rel="stylesheet" type="text/css" href="01_Grundlagen-Dateien/main.css">
 	<link rel="stylesheet" href="01_Grundlagen-Dateien/default.css" id="theme">
