--- a/slides/02_Analyse.htm
+++ b/slides/02_Analyse.htm
@@ -1,7 +1,7 @@
 <html><head>
 <meta http-equiv="content-type" content="text/html; charset=UTF-8">
 	<meta name="viewport" content="width=device-width">
-	<title>Deck Title</title>
+	<title>QGIS Analyse</title>
 	<link rel="stylesheet" href="02_Analyse-Dateien/default-reset.css">
 	<link rel="stylesheet" type="text/css" href="02_Analyse-Dateien/main.css">
 	<link rel="stylesheet" href="02_Analyse-Dateien/default.css" id="theme">
