--- a/slides/03_Visualisierung.htm
+++ b/slides/03_Visualisierung.htm
@@ -1,7 +1,7 @@
 <html><head>
 <meta http-equiv="content-type" content="text/html; charset=UTF-8">
 	<meta name="viewport" content="width=device-width">
-	<title>Deck Title</title>
+	<title>QGIS Visualisierung</title>
 	<link rel="stylesheet" href="03_Visualisierung-Dateien/default-reset.css">
 	<link rel="stylesheet" type="text/css" href="03_Visualisierung-Dateien/main.css">
 	<link rel="stylesheet" href="03_Visualisierung-Dateien/default.css" id="theme">
